--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,36 +1,28 @@
-name: Cypress Tests on Pull Request
+name: Frontend CI
 
 on: push
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+    cypress-test:
+        needs: test
+        runs-on: ubuntu-latest
+        steps:
+            - name: Check out repository code
+              uses: actions/checkout@v3
+            - run: npm i
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14" # Especifica la versión de Node.js que necesitas
-
-      - name: Cache Node modules
-        uses: actions/cache@v2
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Run Cypress Tests
-        uses: cypress-io/github-action@v2
-        with:
-          start: npm start # Comando para iniciar tu servidor, si es necesario
-          wait-on: "http://localhost:3000" # Ajusta la URL según donde corra tu aplicación
-          wait-on-timeout: 300 # Timeout en segundos para esperar que tu aplicación esté lista
+            - name: run cypress tests in chrome
+              uses: cypress-io/github-action@v5
+              timeout-minutes: 10
+              with:
+                  browser: chrome
+                  record: true
+                  build: npm run build
+                  start: npm start
+                  wait-on: 'http://localhost:3000'
+              env:
+                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+                  <Add in all your project specific env vars here>
 
 # name: CI/CD Workflow
 
