--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,29 +1,20 @@
-name: Frontend CI
+name: Cypress Tests
 
 on: push
 
 jobs:
-    cypress-test:
-        needs: test
-        runs-on: ubuntu-latest
-        steps:
-            - name: Check out repository code
-              uses: actions/checkout@v3
-            - run: npm i
-
-            - name: run cypress tests in chrome
-              uses: cypress-io/github-action@v5
-              timeout-minutes: 10
-              with:
-                  browser: chrome
-                  record: true
-                  build: npm run build
-                  start: npm start
-                  wait-on: 'http://localhost:3000'
-              env:
-                  CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-                  <Add in all your project specific env vars here>
-
+  cypress-run:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      # Install npm dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
+        with:
+          build: npm run build
+          start: npm start
 # name: CI/CD Workflow
 
 # on:
