--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,11 +10,12 @@ jobs:
         uses: actions/checkout@v4
         with:
           node-version: 15
-      # Install npm dependencies, cache them correctly
-      # and run all Cypress tests
+
       - name: Cypress.io
         uses: cypress-io/github-action@v6.6.1
 
         with:
           build: npm run build
           start: npm start
+        env:
+          REACT_APP_GPT_KEY: ${{ secrets.REACT_APP_GPT_KEY }}
